--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ requests==2.31.0
 beautifulsoup4==4.12.2
 pandas==2.0.3
 numpy==1.25.2
-Werkzeug==2.3.7 # Importante para check_password_hash
+Werkzeug==2.3.7
+gunicorn==20.1.0
